Bug 1434314: Bring back the relevant tests. r=me
MozReview-Commit-ID: 5inY1MEp2Nl

UltraBlame original commit: 215eaf28c96247901e8b6ac1b37a9c392a74414d

--- a/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-001-ref.html
+++ b/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-001-ref.html
@@ -54,6 +54,10 @@
     <div class="container"><div class="alignStart"></div></div>
     <br>
     
+    <div class="container"><div class="alignStart"></div></div>
+    <div class="container"><div class="alignEnd"></div></div>
+    <br>
+    
     <div class="container"><div class="alignCenter"></div></div>
     <div class="container"><div class="alignStart"></div></div>
     <div class="container"><div class="alignEnd"></div></div>
@@ -74,6 +78,10 @@
     <div class="container"><div class="alignCenter"></div></div>
     <div class="container"><div class="alignStart"></div></div>
     <div class="container"><div class="alignStart"></div></div>
+    <br>
+    
+    <div class="container"><div class="alignStart"></div></div>
+    <div class="container"><div class="alignEnd"></div></div>
     <br>
     
     <div class="container"><div class="alignCenter"></div></div>
