--- a/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-img-001-ref.html
+++ b/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-img-001-ref.html
@@ -56,6 +56,12 @@
     <br>
     
     <div class="container"><img src="support/colors-8x16.png"
+                                class="alignStart"></div>
+    <div class="container"><img src="support/colors-8x16.png"
+                                class="alignEnd"></div>
+    <br>
+    
+    <div class="container"><img src="support/colors-8x16.png"
                                 class="alignCenter"></div>
     <div class="container"><img src="support/colors-8x16.png"
                                 class="alignStart"></div>
@@ -87,6 +93,12 @@
                                 class="alignStart"></div>
     <div class="container"><img src="support/colors-8x16.png"
                                 class="alignStart"></div>
+    <br>
+    
+    <div class="container"><img src="support/colors-8x16.png"
+                                class="alignStart"></div>
+    <div class="container"><img src="support/colors-8x16.png"
+                                class="alignEnd"></div>
     <br>
     
     <div class="container"><img src="support/colors-8x16.png"
