--- a/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-img-002.html
+++ b/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-img-002.html
@@ -54,6 +54,12 @@
     <br>
     
     <div class="container"><img src="support/colors-8x16.png"
+                                style="justify-self: baseline"></div>
+    <div class="container"><img src="support/colors-8x16.png"
+                                style="justify-self: last baseline"></div>
+    <br>
+    
+    <div class="container"><img src="support/colors-8x16.png"
                                 style="justify-self: center"></div>
     <div class="container"><img src="support/colors-8x16.png"
                                 style="justify-self: start"></div>
@@ -85,6 +91,12 @@
                                 style="justify-self: normal"></div>
     <div class="container"><img src="support/colors-8x16.png"
                                 style="justify-self: stretch"></div>
+    <br>
+    
+    <div class="container"><img src="support/colors-8x16.png"
+                                style="justify-self: baseline"></div>
+    <div class="container"><img src="support/colors-8x16.png"
+                                style="justify-self: last baseline"></div>
     <br>
     
     <div class="container"><img src="support/colors-8x16.png"
