--- a/layout/reftests/css-grid/grid-container-baselines-003.html
+++ b/layout/reftests/css-grid/grid-container-baselines-003.html
@@ -45,6 +45,8 @@ span.i { font-size:12px; grid-column:2; }
 
 .sfb { align-self:baseline; }
 .slb { align-self:last baseline; align-content:self-end; }
+.jfb { justify-self:baseline; justify-content:self-end; }
+.jlb { justify-self:last baseline; justify-content:self-end; }
 
 .hl { writing-mode: horizontal-tb; direction:ltr; }
 .hr { writing-mode: horizontal-tb; direction:rtl; }
@@ -167,6 +169,29 @@ A<div class="igrid sfb">
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 A<div class="igrid" style="grid-template-columns:200px">
   <div class="igrid sfb vl" style="grid: 1fr / 7px 13px 50px; grid-row: span 4;">
     <span class="sfb a" style="margin-block-end:27px; padding-block-end:15px;">A<br>B</span>
@@ -181,7 +206,7 @@ A<div class="igrid" style="grid-template-columns:200px">
   </div>
 </div><div class="igrid" style="grid-template-columns:200px">
   <div class="igrid sfb vl" style="grid: 1fr / 7px 13px 50px; grid-row: span 4;">
-    <span class="a" style="margin-block-end:27px; padding-block-end:15px;">A<br>B</span>
+    <span class="jfb a" style="margin-block-end:27px; padding-block-end:15px;">A<br>B</span>
     <n></n>
     <n></n>
   </div>
