--- a/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-001.html
+++ b/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-001.html
@@ -55,6 +55,10 @@
     <div class="container"><div style="justify-self: stretch"></div></div>
     <br>
     
+    <div class="container"><div style="justify-self: baseline"></div></div>
+    <div class="container"><div style="justify-self: last baseline"></div></div>
+    <br>
+    
     <div class="container"><div style="justify-self: center"></div></div>
     <div class="container"><div style="justify-self: start"></div></div>
     <div class="container"><div style="justify-self: end"></div></div>
@@ -75,6 +79,10 @@
     <div class="container"><div style="justify-self: auto"></div></div>
     <div class="container"><div style="justify-self: normal"></div></div>
     <div class="container"><div style="justify-self: stretch"></div></div>
+    <br>
+    
+    <div class="container"><div style="justify-self: baseline"></div></div>
+    <div class="container"><div style="justify-self: last baseline"></div></div>
     <br>
     
     <div class="container"><div style="justify-self: center"></div></div>
