--- a/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-img-002-ref.html
+++ b/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-img-002-ref.html
@@ -54,6 +54,12 @@
     <br>
     
     <div class="container"><img src="support/colors-8x16.png"
+                                class="alignStart"></div>
+    <div class="container"><img src="support/colors-8x16.png"
+                                class="alignEnd"></div>
+    <br>
+    
+    <div class="container"><img src="support/colors-8x16.png"
                                 class="alignCenter"></div>
     <div class="container"><img src="support/colors-8x16.png"
                                 class="alignStart"></div>
@@ -85,6 +91,12 @@
                                 class="alignStart"></div>
     <div class="container"><img src="support/colors-8x16.png"
                                 class="alignStart"></div>
+    <br>
+    
+    <div class="container"><img src="support/colors-8x16.png"
+                                class="alignStart"></div>
+    <div class="container"><img src="support/colors-8x16.png"
+                                class="alignEnd"></div>
     <br>
     
     <div class="container"><img src="support/colors-8x16.png"
