--- a/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-rtl-003-ref.html
+++ b/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-rtl-003-ref.html
@@ -52,6 +52,10 @@
     <div class="container"><div class="alignStart"></div></div>
     <br>
     
+    <div class="container"><div class="alignStart"></div></div>
+    <div class="container"><div class="alignEnd"></div></div>
+    <br>
+    
     <div class="container"><div class="alignCenter"></div></div>
     <div class="container"><div class="alignStart"></div></div>
     <div class="container"><div class="alignEnd"></div></div>
@@ -72,6 +76,10 @@
     <div class="container"><div class="alignStart"></div></div>
     <div class="container"><div class="alignStart"></div></div>
     <div class="container"><div class="alignStart"></div></div>
+    <br>
+    
+    <div class="container"><div class="alignStart"></div></div>
+    <div class="container"><div class="alignEnd"></div></div>
     <br>
     
     <div class="container"><div class="alignCenter"></div></div>
