--- a/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-rtl-003.html
+++ b/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-rtl-003.html
@@ -54,6 +54,10 @@
     <div class="container"><div style="justify-self: stretch"></div></div>
     <br>
     
+    <div class="container"><div style="justify-self: baseline"></div></div>
+    <div class="container"><div style="justify-self: last baseline"></div></div>
+    <br>
+    
     <div class="container"><div style="justify-self: center"></div></div>
     <div class="container"><div style="justify-self: start"></div></div>
     <div class="container"><div style="justify-self: end"></div></div>
@@ -74,6 +78,10 @@
     <div class="container"><div style="justify-self: auto"></div></div>
     <div class="container"><div style="justify-self: normal"></div></div>
     <div class="container"><div style="justify-self: stretch"></div></div>
+    <br>
+    
+    <div class="container"><div style="justify-self: baseline"></div></div>
+    <div class="container"><div style="justify-self: last baseline"></div></div>
     <br>
     
     <div class="container"><div style="justify-self: center"></div></div>
