--- a/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-vertWM-002-ref.html
+++ b/layout/reftests/w3c-css/submitted/align3/grid-abspos-staticpos-justify-self-vertWM-002-ref.html
@@ -56,6 +56,10 @@
     <div class="container"><div class="alignStart"></div></div>
     <br>
     
+    <div class="container"><div class="alignStart"></div></div>
+    <div class="container"><div class="alignEnd"></div></div>
+    <br>
+    
     <div class="container"><div class="alignCenter"></div></div>
     <div class="container"><div class="alignStart"></div></div>
     <div class="container"><div class="alignEnd"></div></div>
@@ -76,6 +80,10 @@
     <div class="container"><div class="alignStart"></div></div>
     <div class="container"><div class="alignStart"></div></div>
     <div class="container"><div class="alignStart"></div></div>
+    <br>
+    
+    <div class="container"><div class="alignStart"></div></div>
+    <div class="container"><div class="alignEnd"></div></div>
     <br>
     
     <div class="container"><div class="alignCenter"></div></div>
