Bug 1433420 - fix scrollbox width selector for emulated flex to only apply to tabbrowser scrollbox, r=bgrins,dao
MozReview-Commit-ID: 6WPoJKZFCAD

UltraBlame original commit: d3822c7998ece5a3af0ca3ce2c635a5ba040d3c0

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -50,7 +50,8 @@ tabbrowser {
     
     min-width: 0;
   }
-  .scrollbox-innerbox {
+
+  .tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox > .scrollbox-innerbox {
     
 
 
