--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -6,9 +6,13 @@
 %filter substitution
 %define horizontalTabPadding 9px
 
+
 :root {
-  --tabs-top-border-width: 0px;
   --tab-min-height: 33px;
+}
+
+#tabbrowser-tabs {
+  --tabs-top-border-width: 0px;
   --tab-min-width: 76px;
   --tab-loading-fill: #0A84FF;
 }
@@ -21,7 +25,7 @@
   --tab-min-height: 41px;
 }
 
-:root:-moz-lwtheme {
+#tabbrowser-tabs:-moz-lwtheme {
   --tab-line-color: var(--lwt-accent-color);
 }
 
