--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -282,7 +282,7 @@ menulist {
 
 
 toolbox {
-  -moz-binding: url("chrome://global/content/bindings/toolbar.xml#toolbox");
+  -moz-appearance: toolbox;
   -moz-box-orient: vertical;
 }
 
