--- a/devtools/client/shared/components/test/mochitest/test_tree_09.html
+++ b/devtools/client/shared/components/test/mochitest/test_tree_09.html
@@ -21,7 +21,7 @@ window.onload = Task.async(function* () {
   try {
     const ReactDOM = browserRequire("devtools/client/shared/vendor/react-dom");
     const { createFactory } = browserRequire("devtools/client/shared/vendor/react");
-    const { Simulate } = browserRequire("devtools/client/shared/vendor/react-dom-test-utils");
+    const { Simulate } = ReactDOM.TestUtils;
     const Tree = createFactory(browserRequire("devtools/client/shared/components/VirtualizedTree"));
 
     let numberOfExpands = 0;
