Bug 1429732 - Use a pref to disable registerProtocolHandler in insecure contexts. r=baku,dao
MozReview-Commit-ID: 9NxFv57CyZO

UltraBlame original commit: dcb60325f0cf4e375a0e2bb36d96e7632a16bdba

--- a/browser/components/feeds/test/test_registerHandler.html
+++ b/browser/components/feeds/test/test_registerHandler.html
@@ -36,7 +36,10 @@
 
   async function tests() {
     await SpecialPowers.pushPrefEnv({
-      set: [["dom.registerContentHandler.enabled", true]]
+      set: [
+        ["dom.registerContentHandler.enabled", true],
+        ["dom.registerProtocolHandler.insecure.enabled", true],
+      ]
     });
     ok(navigator.registerContentHandler, "navigator.registerContentHandler should be defined");
 
