--- a/browser/components/feeds/test/test_registerHandler_disabled.html
+++ b/browser/components/feeds/test/test_registerHandler_disabled.html
@@ -20,9 +20,13 @@
 
   async function tests() {
     await SpecialPowers.pushPrefEnv({
-      set: [["dom.registerContentHandler.enabled", true]]
+      set: [
+        ["dom.registerContentHandler.enabled", false],
+        ["dom.registerProtocolHandler.insecure.enabled", false],
+      ]
     });
-    ok(navigator.registerContentHandler, "navigator.registerContentHandler should be defined");
+    ok(!navigator.registerContentHandler, "navigator.registerContentHandler should be undefined");
+    ok(!navigator.registerProtocolHandler, "navigator.registerProtocolHandler should be undefined");
     SimpleTest.finish();
   }
 
