--- a/browser/components/feeds/test/test_registerHandler.html
+++ b/browser/components/feeds/test/test_registerHandler.html
@@ -36,10 +36,7 @@
 
   async function tests() {
     await SpecialPowers.pushPrefEnv({
-      set: [
-        ["dom.registerContentHandler.enabled", true],
-        ["dom.registerProtocolHandler.insecure.enabled", true],
-      ]
+      set: [["dom.registerContentHandler.enabled", true]]
     });
     ok(navigator.registerContentHandler, "navigator.registerContentHandler should be defined");
 
