Bug 1432716 - Group the "Show search suggestions ahead of browsing history in address bar results" checkbox with other search suggestion checkboxes. ui=shorlander r=adw
MozReview-Commit-ID: 6Xt8MixhV3x

UltraBlame original commit: 98b4549200aafb12ff8a29af5620fe3bba11a0d1

--- a/browser/themes/shared/incontentprefs/search.css
+++ b/browser/themes/shared/incontentprefs/search.css
@@ -12,8 +12,7 @@
   list-style-image: url("chrome://browser/skin/preferences/in-content/no-search-bar.svg");
 }
 
-#searchBarShownRadio,
-#showSearchSuggestionsFirstCheckbox {
+#searchBarShownRadio {
   
   margin-top: 10px;
 }
