Backed out changeset 98b4549200aa (bug 1432716) expected to fail.
UltraBlame original commit: a69567089eb137294c2b350d1f330566e474389e

--- a/browser/themes/shared/incontentprefs/search.css
+++ b/browser/themes/shared/incontentprefs/search.css
@@ -12,7 +12,8 @@
   list-style-image: url("chrome://browser/skin/preferences/in-content/no-search-bar.svg");
 }
 
-#searchBarShownRadio {
+#searchBarShownRadio,
+#showSearchSuggestionsFirstCheckbox {
   
   margin-top: 10px;
 }
