--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -921,6 +921,16 @@ autorepeatbutton {
 
 
 
+spinbuttons {
+  -moz-binding: url("chrome://global/content/bindings/spinbuttons.xml#spinbuttons");
+}
+
+.spinbuttons-button {
+  -moz-user-focus: ignore;
+}
+
+
+
 stringbundleset {
   visibility: collapse;
 }
