--- a/devtools/client/themes/animation.css
+++ b/devtools/client/themes/animation.css
@@ -352,6 +352,10 @@
   -moz-context-properties: fill;
 }
 
+.animated-property-name.warning span {
+  text-decoration: underline dotted;
+}
+
 
 .animation-error-message {
   overflow: auto;
