Bug 1416106 - Part 5: Implement base of keyframes graph. r=gl
MozReview-Commit-ID: FpTZvREM35Y

UltraBlame original commit: 3f449e2f4ef19d2021331354eff65f86e723a3ee

--- a/devtools/client/themes/animation.css
+++ b/devtools/client/themes/animation.css
@@ -305,6 +305,7 @@
 
 
 .animated-property-item {
+  display: flex;
   height: 30px;
 }
 
@@ -354,6 +355,12 @@
 
 .animated-property-name.warning span {
   text-decoration: underline dotted;
+}
+
+
+.keyframes-graph {
+  height: 100%;
+  width: calc(100% - var(--sidebar-width) - var(--graph-right-offset));
 }
 
 
