--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -18,13 +18,9 @@
 
 :root:-moz-lwtheme {
   background-color: var(--lwt-accent-color) !important;
-  background-image: var(--lwt-additional-images) !important;
+  background-image: var(--lwt-header-image), var(--lwt-additional-images) !important;
   background-position: var(--lwt-background-alignment) !important;
   background-repeat: var(--lwt-background-tiling) !important;
-}
-
-:root:-moz-lwtheme[lwtheme-image] {
-  background-image: var(--lwt-header-image), var(--lwt-additional-images) !important;
 }
 
 :root:-moz-lwtheme:-moz-window-inactive {
@@ -600,15 +596,29 @@ html|input.urlbar-input[textoverflow]:not([focused]) {
 
 
 
-.ac-url[actiontype],
-.ac-action:not([actiontype]) {
-  display: none;
+#PopupAutoCompleteRichResult > richlistbox > scrollbox {
+  overflow: hidden !important;
 }
 
 
 
-#PopupAutoCompleteRichResult > richlistbox > scrollbox {
-  overflow: hidden !important;
+#PopupAutoCompleteRichResult > richlistbox > richlistitem > .ac-type-icon,
+#PopupAutoCompleteRichResult > richlistbox > richlistitem > .ac-site-icon,
+#PopupAutoCompleteRichResult > richlistbox > richlistitem > .ac-tags:not([empty]),
+#PopupAutoCompleteRichResult > richlistbox > richlistitem > .ac-separator:not([type=keyword]),
+#PopupAutoCompleteRichResult > richlistbox > richlistitem > .ac-url:not([actiontype]),
+#PopupAutoCompleteRichResult > richlistbox > richlistitem > .ac-action[actiontype] {
+  display: -moz-box;
+}
+
+
+#PopupAutoCompleteRichResult > richlistbox > richlistitem:not([selected]):not(:hover) > .ac-action[actiontype=searchengine],
+#PopupAutoCompleteRichResult > richlistbox > richlistitem:not([selected]):not(:hover) > .ac-separator[actiontype=searchengine] {
+  display: none;
+}
+
+#PopupAutoCompleteRichResult > richlistbox > richlistitem > .ac-site-icon {
+  margin-inline-start: 0;
 }
 
 
@@ -629,14 +639,6 @@ html|input.urlbar-input[textoverflow]:not([focused]) {
   display: none;
 }
 
-#PopupAutoComplete > richlistbox > richlistitem > .ac-type-icon,
-#PopupAutoComplete > richlistbox > richlistitem > .ac-site-icon,
-#PopupAutoComplete > richlistbox > richlistitem > .ac-tags,
-#PopupAutoComplete > richlistbox > richlistitem > .ac-separator,
-#PopupAutoComplete > richlistbox > richlistitem > .ac-url {
-  display: none;
-}
-
 #PopupAutoComplete[firstresultstyle="insecureWarning"] {
   min-width: 200px;
 }
@@ -647,6 +649,7 @@ html|input.urlbar-input[textoverflow]:not([focused]) {
 }
 
 #PopupAutoComplete > richlistbox > richlistitem[originaltype="insecureWarning"] > .ac-site-icon {
+  margin-inline-start: 0;
   display: initial;
 }
 
