Bug 1419442 - [Linux/Titlebar rendering] Add optional drag space above titlebar, r=dao
MozReview-Commit-ID: KkKXcrIPFhg

UltraBlame original commit: 67191cda45ff67071ad055be9d9b688930746b84

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -655,6 +655,20 @@ notification[value="translation"] menulist > .menulist-dropmarker {
   }
 
   
+  :root[sizemode="normal"][chromehidden~="menubar"] #TabsToolbar,
+  :root[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive] + #TabsToolbar {
+    margin-top: var(--space-above-tabbar);
+  }
+
+  
+  :root[sizemode="normal"][chromehidden~="menubar"] #TabsToolbar > .private-browsing-indicator,
+  :root[sizemode="normal"][chromehidden~="menubar"] #TabsToolbar > .accessibility-indicator,
+  :root[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive] + #TabsToolbar > .private-browsing-indicator,
+  :root[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive] + #TabsToolbar > .accessibility-indicator {
+    margin-top: calc(-1 * var(--space-above-tabbar));
+  }
+
+  
 
 
 
