Bug 1436670 - Devtools Reps: update bundle to v0.20.0; r=nchevobbe.
MozReview-Commit-ID: 75lSnYTx0Ql

UltraBlame original commit: 5b8dd2380f3eda126be82974414577a53ca64a27

--- a/devtools/client/shared/components/reps/reps.css
+++ b/devtools/client/shared/components/reps/reps.css
@@ -66,6 +66,12 @@
 
 .objectBox-string a, .objectBox-string a:visited {
   color: currentColor;
+  text-decoration: none;
+  font-style: italic;
+}
+
+.objectBox-string a:hover {
+  text-decoration: underline;
 }
 
 .objectBox-function,
@@ -146,6 +152,13 @@
 
 .angleBracket {
   color: var(--theme-body-color);
+}
+
+
+
+
+.objectLengthBubble {
+  color: var(--null-color);
 }
 
 
