Bug 1439803 - Add reftest-no-flush flag to stacking-context-transform-none-animation-before-appending-element.html. r=birtles
If reftest-no-flush is not specified, reftest harness flushes layout in a
callback of setTimeout() that happens after paint process happened in the next
refresh driver's tick.  Thus, the paint process triggered by the layout flush
causes no invalidation changes, so reftest harness ends up waiting for the
animation end until the animation finishes.

MozReview-Commit-ID: GXvmyXh0kfV

UltraBlame original commit: dcfba10b551c2e60056dc83dbb05bb9611ba2fef

--- a/layout/reftests/web-animations/stacking-context-transform-none-animation-before-appending-element.html
+++ b/layout/reftests/web-animations/stacking-context-transform-none-animation-before-appending-element.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html class="reftest-wait">
+<html class="reftest-wait reftest-no-flush">
+
+
+
+
+
 <title>Transform animation whose target is not initially associated with any document creates a stacking context even if it has only 'transform:none' in its keyframe</title>
 <style>
 span {
