Bug 1441198 - Part 3 - Add some space above the cookies preferences. r=nhnt11
MozReview-Commit-ID: 4d0aYIgZZ32

UltraBlame original commit: a8f35224e73f485c6c9367a741cbc56faca065c4

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -389,6 +389,10 @@ button > hbox > label {
   margin-top: 4px;
 }
 
+#acceptCookies {
+  margin-top: 1.5em;
+}
+
 
 
 #historyPane:not([selectedIndex="1"]) > #historyDontRememberPane,
