Bug 1429211 - Implement the 'success' screen for when the merchant accepts the payment. r=MattN
MozReview-Commit-ID: 5AAKzKMqXVx

UltraBlame original commit: 884c918d978c4b5fcc7062237ee67323689fadbc

--- a/toolkit/components/payments/res/paymentRequest.css
+++ b/toolkit/components/payments/res/paymentRequest.css
@@ -82,7 +82,8 @@ payment-dialog > footer {
   border: none;
 }
 
-payment-dialog[changes-prevented][completion-state="processing"] #pay {
+payment-dialog[changes-prevented][completion-state="processing"] #pay,
+payment-dialog[changes-prevented][completion-state="success"] #pay {
   
   position: relative;
   z-index: 1;
