--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -255,11 +255,10 @@ caption {
 
 %ifndef MOZ_WIDGET_GTK
 titlebar,
-toolbar:not([nowindowdrag="true"]):not([customizing="true"]),
-%endif
-windowdragbox {
+toolbar:not([nowindowdrag="true"]):not([customizing="true"]) {
   -moz-window-dragging: drag;
 }
+%endif
 
 
 toolbaritem,
