Bug 1442651 - Remove the tabbrowser element and binding. r=bgrins
MozReview-Commit-ID: 2IXukkFq5C2

UltraBlame original commit: 562966f195b0f071cf1d973f7b4fd51ec8594343

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -31,12 +31,12 @@
   --tab-line-color: var(--lwt-accent-color);
 }
 
-tabbrowser {
+#tabbrowser-tabpanels {
   
   background-color: #f9f9fa;
 }
 
-:root[privatebrowsingmode=temporary] tabbrowser {
+:root[privatebrowsingmode=temporary] #tabbrowser-tabpanels {
   
   background-color: #25003e;
 }
