Bug 1737262: Update tests within toolkit/components/url-classifier/tests/mochitest to work with https-first enabled r=dimi
Differential Revision: https://phabricator.services.mozilla.com/D129260

UltraBlame original commit: 680368eebc9a79199d3ef4557e274d6ae1ffd94c

--- a/toolkit/components/url-classifier/tests/mochitest/test_trackingprotection_bug1580416.html
+++ b/toolkit/components/url-classifier/tests/mochitest/test_trackingprotection_bug1580416.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-
-
+<!-- Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/ -->
 <html>
 <head>
   <title>Test Tracking Protection in Private Browsing mode</title>
@@ -72,6 +72,7 @@ SpecialPowers.pushPrefEnv(
   {"set": [["privacy.trackingprotection.enabled", true],
            ["urlclassifier.trackingTable", "test-track-simple"],
            ["urlclassifier.trackingWhitelistTable", "test-trackwhite-simple"],
+           ["dom.security.https_first", false],
            ["network.stricttransportsecurity.preloadlist", false]]},
   test);
 
