--- a/browser/themes/shared/downloads/download-blockedStates.inc.css
+++ b/browser/themes/shared/downloads/download-blockedStates.inc.css
@@ -53,9 +53,7 @@
 }
 
 #downloadsPanel-blockedSubview[verdict="PotentiallyUnwanted"] .downloadsPanel-blockedSubview-image,
-#downloadsPanel-blockedSubview[verdict="DownloadSpam"] .downloadsPanel-blockedSubview-image,
-@item@[verdict="PotentiallyUnwanted"] .downloadBlockedBadge,
-@item@[verdict="DownloadSpam"] .downloadBlockedBadge  {
+@item@[verdict="PotentiallyUnwanted"] .downloadBlockedBadge {
   -moz-context-properties: fill;
   fill: #ffbf00;
   background-image: url("chrome://global/skin/icons/warning.svg");
