Backed out changeset 16895673c015 (bug 1474842) for causing android geckoview failures. CLOSED TREE
UltraBlame original commit: 8077dd2baa24b2e0d9609c03e24807ee64a5d2b0

--- a/toolkit/components/extensions/test/xpcshell/data/file_do_load_script_subresource.html
+++ b/toolkit/components/extensions/test/xpcshell/data/file_do_load_script_subresource.html
@@ -4,6 +4,6 @@
 <meta charset="utf-8">
 </head>
 <body>
-<script src="https://example.net/intercept_by_webRequest.js"></script>
+<script src="http://example.net/intercept_by_webRequest.js"></script>
 </body>
 </html>
