--- a/devtools/client/aboutdebugging/src/components/ProfilerDialog.css
+++ b/devtools/client/aboutdebugging/src/components/ProfilerDialog.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 .profiler-dialog__frame {
   border: none;
@@ -8,16 +8,17 @@
   width: 100%;
 }
 
-
-
-
-
-
-
-
+/*
+ * The current layout of the dialog header is
+ *
+ *  +-----------------------------+---+
+ *  | dialog title (auto)         | X |
+ *  +-----------------------------+---+
+ */
 .profiler-dialog__header {
   align-items: center;
-  background-color: var(--grey-20);
+  background-color: var(--popup-header-background-color);
+  color: var(--popup-header-color);
   display: grid;
   grid-template-columns: 1fr max-content;
   padding: var(--base-unit);
@@ -26,27 +27,27 @@
 .profiler-dialog__header__title {
   margin-inline-start: calc(var(--base-unit) * 2);
 
-  
+  /* Reset <h1> styles */
   font-size: 15px;
   font-weight: normal;
 }
 
 .profiler-dialog__inner {
-  background-color: var(--white-100);
+  background-color: var(--box-background);
   display: grid;
   grid-template-rows: max-content auto;
-  max-height: calc(100% - calc(var(--base-unit) * 25)); 
+  max-height: calc(100% - calc(var(--base-unit) * 25)); /* 100% - 100px */
   position: fixed;
 }
 
 .profiler-dialog__inner--medium {
-  width: calc(var(--base-unit) * 150); 
-  height: calc(var(--base-unit) * 150); 
+  width: calc(var(--base-unit) * 150); /* 600px */
+  height: calc(var(--base-unit) * 150); /* 600px */
 }
 
 .profiler-dialog__inner--large {
-  width: calc(var(--base-unit) * 200); 
-  height: calc(var(--base-unit) * 175); 
+  width: calc(var(--base-unit) * 200); /* 800px */
+  height: calc(var(--base-unit) * 175); /* 700px */
 }
 
 .profiler-dialog__mask {
