Backed out changeset 2635e89a1790 (bug 1733671) for causing mochitest failures on browser_parsable_css.js. CLOSED TREE
UltraBlame original commit: 8b02ee6e498410a315594ad14044e9d644905ff1

--- a/devtools/client/aboutdebugging/src/components/ProfilerDialog.css
+++ b/devtools/client/aboutdebugging/src/components/ProfilerDialog.css
@@ -17,8 +17,7 @@
  */
 .profiler-dialog__header {
   align-items: center;
-  background-color: var(--popup-header-background-color);
-  color: var(--popup-header-color);
+  background-color: var(--grey-20);
   display: grid;
   grid-template-columns: 1fr max-content;
   padding: var(--base-unit);
@@ -33,7 +32,7 @@
 }
 
 .profiler-dialog__inner {
-  background-color: var(--box-background);
+  background-color: var(--white-100);
   display: grid;
   grid-template-rows: max-content auto;
   max-height: calc(100% - calc(var(--base-unit) * 25)); /* 100% - 100px */
