Bug 1738693 - Serialize image local refs as local. r=jwatt
As per https://github.com/w3c/csswg-drafts/issues/3195

If we ship this, then we can simplify a bunch of code (we can remove
SpecifiedImageUrl / ComputedImageUrl and co).

Differential Revision: https://phabricator.services.mozilla.com/D130160

UltraBlame original commit: a3bf09c4c539845ea40134ab8e54644be968c765

--- a/layout/style/test/test_computed_style.html
+++ b/layout/style/test/test_computed_style.html
@@ -430,6 +430,8 @@ var noframe_container = document.getElementById("content");
   var resolvedNonLocalURL = "url(\"" + docPath + "foo.svg#foo\")";
 
   var testStyles = [
+    "maskImage",
+    "backgroundImage",
     "markerStart",
     "markerMid",
     "markerEnd",
