--- a/layout/style/test/test_non_content_accessible_pseudos.html
+++ b/layout/style/test/test_non_content_accessible_pseudos.html
@@ -31,6 +31,11 @@ const NON_CONTENT_ACCESIBLE_PSEUDOS = [
   ":-moz-dir-attr-rtl",
   ":-moz-dir-attr-like-auto",
   ":-moz-autofill-preview",
+  ":-moz-lwtheme",
+  ":-moz-lwtheme-brighttext",
+  ":-moz-lwtheme-darkttext",
+  ":-moz-locale-dir(rtl)",
+  ":-moz-locale-dir(ltr)",
 
   "::-moz-tree-row",
   "::-moz-tree-row(foo)",
