--- a/browser/components/pocket/content/panels/saved.html
+++ b/browser/components/pocket/content/panels/saved.html
@@ -14,7 +14,8 @@
         <script src="js/vendor/handlebars.runtime.js"></script>
         <script src="js/vendor/jquery.tokeninput.min.js"></script>
         <script src="js/tmpl.js"></script>
-        <script src="js/main.bundle.js"></script>
-        <script src="js/saved/entry.js"></script>
+        <script src="js/messages.js"></script>
+        <script src="js/saved.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
