--- a/browser/components/pocket/content/panels/signup.html
+++ b/browser/components/pocket/content/panels/signup.html
@@ -13,7 +13,8 @@
     <body class="pkt_ext_containersignup" aria-live="polite">
         <script src="js/vendor/handlebars.runtime.js"></script>
         <script src="js/tmpl.js"></script>
-        <script src="js/main.bundle.js"></script>
-        <script src="js/signup/entry.js"></script>
+        <script src="js/messages.js"></script>
+        <script src="js/signup.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
