--- a/layout/xul/test/test_bug159346.xhtml
+++ b/layout/xul/test/test_bug159346.xhtml
@@ -27,8 +27,7 @@ function init()
   downButton = SpecialPowers.unwrap(
     SpecialPowers.InspectorUtils.getChildrenForNode(scrollbar, true)[4]);
   if (!downButton) {
-    ok(navigator.userAgent.indexOf("Linux") !== -1 ||
-       navigator.userAgent.indexOf("Mac") !== -1, "Theme doesn't support scrollbar buttons");
+    ok(navigator.userAgent.indexOf("Linux") !== -1, "Theme doesn't support scrollbar buttons");
     SimpleTest.finish();
     return;
   }
