Bug 1738422 - Part 4: Update Gecko to Unicode 14. r=platform-i18n-reviewers,dminor
Update to Unicode 14 by running `genUnicodePropertyData.pl` and `genSpecialCasingData.pl`.

Depends on D129925

Differential Revision: https://phabricator.services.mozilla.com/D129926

UltraBlame original commit: d1b1ebc61bd337c1046d7f1db38c5c65ec1aaebf

--- a/layout/reftests/text-transform/all-lower-ref.html
+++ b/layout/reftests/text-transform/all-lower-ref.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- GENERATED FILE, DO NOT EDIT -->
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -90,7 +90,7 @@
 &#x012B;
 &#x012D;
 &#x012F;
-&#x0069;&#x0307; 
+&#x0069;&#x0307; <!-- LATIN CAPITAL LETTER I WITH DOT ABOVE -->
 &#x0133;
 &#x0135;
 &#x0137;
@@ -823,40 +823,40 @@
 &#x1F65;
 &#x1F66;
 &#x1F67;
-&#x1F80; 
-&#x1F81; 
-&#x1F82; 
-&#x1F83; 
-&#x1F84; 
-&#x1F85; 
-&#x1F86; 
-&#x1F87; 
-&#x1F90; 
-&#x1F91; 
-&#x1F92; 
-&#x1F93; 
-&#x1F94; 
-&#x1F95; 
-&#x1F96; 
-&#x1F97; 
-&#x1FA0; 
-&#x1FA1; 
-&#x1FA2; 
-&#x1FA3; 
-&#x1FA4; 
-&#x1FA5; 
-&#x1FA6; 
-&#x1FA7; 
+&#x1F80; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F81; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F82; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F83; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F84; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F85; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F86; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F87; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F90; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F91; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F92; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F93; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F94; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F95; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F96; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F97; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1FA0; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1FA1; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1FA2; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1FA3; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1FA4; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1FA5; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1FA6; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1FA7; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
 &#x1FB0;
 &#x1FB1;
 &#x1F70;
 &#x1F71;
-&#x1FB3; 
+&#x1FB3; <!-- GREEK CAPITAL LETTER ALPHA WITH PROSGEGRAMMENI -->
 &#x1F72;
 &#x1F73;
 &#x1F74;
 &#x1F75;
-&#x1FC3; 
+&#x1FC3; <!-- GREEK CAPITAL LETTER ETA WITH PROSGEGRAMMENI -->
 &#x1FD0;
 &#x1FD1;
 &#x1F76;
@@ -870,7 +870,7 @@
 &#x1F79;
 &#x1F7C;
 &#x1F7D;
-&#x1FF3; 
+&#x1FF3; <!-- GREEK CAPITAL LETTER OMEGA WITH PROSGEGRAMMENI -->
 &#x03C9;
 &#x006B;
 &#x00E5;
@@ -965,6 +965,7 @@
 &#x2C5C;
 &#x2C5D;
 &#x2C5E;
+&#x2C5F;
 &#x2C61;
 &#x026B;
 &#x1D7D;
@@ -1145,12 +1146,16 @@
 &#xA7BB;
 &#xA7BD;
 &#xA7BF;
+&#xA7C1;
 &#xA7C3;
 &#xA794;
 &#x0282;
 &#x1D8E;
 &#xA7C8;
 &#xA7CA;
+&#xA7D1;
+&#xA7D7;
+&#xA7D9;
 &#xA7F6;
 &#xFF41;
 &#xFF42;
@@ -1254,6 +1259,41 @@
 &#x104F9;
 &#x104FA;
 &#x104FB;
+&#x10597;
+&#x10598;
+&#x10599;
+&#x1059A;
+&#x1059B;
+&#x1059C;
+&#x1059D;
+&#x1059E;
+&#x1059F;
+&#x105A0;
+&#x105A1;
+&#x105A3;
+&#x105A4;
+&#x105A5;
+&#x105A6;
+&#x105A7;
+&#x105A8;
+&#x105A9;
+&#x105AA;
+&#x105AB;
+&#x105AC;
+&#x105AD;
+&#x105AE;
+&#x105AF;
+&#x105B0;
+&#x105B1;
+&#x105B3;
+&#x105B4;
+&#x105B5;
+&#x105B6;
+&#x105B7;
+&#x105B8;
+&#x105B9;
+&#x105BB;
+&#x105BC;
 &#x10CC0;
 &#x10CC1;
 &#x10CC2;
