--- a/layout/reftests/text-transform/all-lower.html
+++ b/layout/reftests/text-transform/all-lower.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- GENERATED FILE, DO NOT EDIT -->
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -90,7 +90,7 @@
 &#x012A;
 &#x012C;
 &#x012E;
-&#x0130; 
+&#x0130; <!-- LATIN CAPITAL LETTER I WITH DOT ABOVE -->
 &#x0132;
 &#x0134;
 &#x0136;
@@ -823,40 +823,40 @@
 &#x1F6D;
 &#x1F6E;
 &#x1F6F;
-&#x1F88; 
-&#x1F89; 
-&#x1F8A; 
-&#x1F8B; 
-&#x1F8C; 
-&#x1F8D; 
-&#x1F8E; 
-&#x1F8F; 
-&#x1F98; 
-&#x1F99; 
-&#x1F9A; 
-&#x1F9B; 
-&#x1F9C; 
-&#x1F9D; 
-&#x1F9E; 
-&#x1F9F; 
-&#x1FA8; 
-&#x1FA9; 
-&#x1FAA; 
-&#x1FAB; 
-&#x1FAC; 
-&#x1FAD; 
-&#x1FAE; 
-&#x1FAF; 
+&#x1F88; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F89; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F8A; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F8B; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F8C; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F8D; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F8E; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F8F; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F98; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F99; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F9A; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F9B; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F9C; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F9D; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F9E; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F9F; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1FA8; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1FA9; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1FAA; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1FAB; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1FAC; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1FAD; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1FAE; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1FAF; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
 &#x1FB8;
 &#x1FB9;
 &#x1FBA;
 &#x1FBB;
-&#x1FBC; 
+&#x1FBC; <!-- GREEK CAPITAL LETTER ALPHA WITH PROSGEGRAMMENI -->
 &#x1FC8;
 &#x1FC9;
 &#x1FCA;
 &#x1FCB;
-&#x1FCC; 
+&#x1FCC; <!-- GREEK CAPITAL LETTER ETA WITH PROSGEGRAMMENI -->
 &#x1FD8;
 &#x1FD9;
 &#x1FDA;
@@ -870,7 +870,7 @@
 &#x1FF9;
 &#x1FFA;
 &#x1FFB;
-&#x1FFC; 
+&#x1FFC; <!-- GREEK CAPITAL LETTER OMEGA WITH PROSGEGRAMMENI -->
 &#x2126;
 &#x212A;
 &#x212B;
@@ -965,6 +965,7 @@
 &#x2C2C;
 &#x2C2D;
 &#x2C2E;
+&#x2C2F;
 &#x2C60;
 &#x2C62;
 &#x2C63;
@@ -1145,12 +1146,16 @@
 &#xA7BA;
 &#xA7BC;
 &#xA7BE;
+&#xA7C0;
 &#xA7C2;
 &#xA7C4;
 &#xA7C5;
 &#xA7C6;
 &#xA7C7;
 &#xA7C9;
+&#xA7D0;
+&#xA7D6;
+&#xA7D8;
 &#xA7F5;
 &#xFF21;
 &#xFF22;
@@ -1254,6 +1259,41 @@
 &#x104D1;
 &#x104D2;
 &#x104D3;
+&#x10570;
+&#x10571;
+&#x10572;
+&#x10573;
+&#x10574;
+&#x10575;
+&#x10576;
+&#x10577;
+&#x10578;
+&#x10579;
+&#x1057A;
+&#x1057C;
+&#x1057D;
+&#x1057E;
+&#x1057F;
+&#x10580;
+&#x10581;
+&#x10582;
+&#x10583;
+&#x10584;
+&#x10585;
+&#x10586;
+&#x10587;
+&#x10588;
+&#x10589;
+&#x1058A;
+&#x1058C;
+&#x1058D;
+&#x1058E;
+&#x1058F;
+&#x10590;
+&#x10591;
+&#x10592;
+&#x10594;
+&#x10595;
 &#x10C80;
 &#x10C81;
 &#x10C82;
