--- a/layout/reftests/text-transform/all-title-ref.html
+++ b/layout/reftests/text-transform/all-title-ref.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- GENERATED FILE, DO NOT EDIT -->
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -37,7 +37,7 @@
 &#x0059;x
 &#x005A;x
 &#x039C;x
-&#x0053;&#x0073;x 
+&#x0053;&#x0073;x <!-- LATIN SMALL LETTER SHARP S -->
 &#x00C0;x
 &#x00C1;x
 &#x00C2;x
@@ -105,7 +105,7 @@
 &#x0143;x
 &#x0145;x
 &#x0147;x
-&#x02BC;&#x004E;x 
+&#x02BC;&#x004E;x <!-- LATIN SMALL LETTER N PRECEDED BY APOSTROPHE -->
 &#x014A;x
 &#x014C;x
 &#x014E;x
@@ -181,7 +181,7 @@
 &#x01EA;x
 &#x01EC;x
 &#x01EE;x
-&#x004A;&#x030C;x 
+&#x004A;&#x030C;x <!-- LATIN SMALL LETTER J WITH CARON -->
 &#x01F1;x
 &#x01F2;x
 &#x01F2;x
@@ -268,12 +268,12 @@
 &#x03FD;x
 &#x03FE;x
 &#x03FF;x
-&#x03AA;&#x0301;x 
+&#x03AA;&#x0301;x <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND TONOS -->
 &#x0386;x
 &#x0388;x
 &#x0389;x
 &#x038A;x
-&#x03AB;&#x0301;x 
+&#x03AB;&#x0301;x <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND TONOS -->
 &#x0391;x
 &#x0392;x
 &#x0393;x
@@ -514,7 +514,7 @@
 &#x0554;x
 &#x0555;x
 &#x0556;x
-&#x0535;&#x0582;x 
+&#x0535;&#x0582;x <!-- ARMENIAN SMALL LIGATURE ECH YIWN -->
 &#x10D0;x
 &#x10D1;x
 &#x10D2;x
@@ -654,11 +654,11 @@
 &#x1E90;x
 &#x1E92;x
 &#x1E94;x
-&#x0048;&#x0331;x 
-&#x0054;&#x0308;x 
-&#x0057;&#x030A;x 
-&#x0059;&#x030A;x 
-&#x0041;&#x02BE;x 
+&#x0048;&#x0331;x <!-- LATIN SMALL LETTER H WITH LINE BELOW -->
+&#x0054;&#x0308;x <!-- LATIN SMALL LETTER T WITH DIAERESIS -->
+&#x0057;&#x030A;x <!-- LATIN SMALL LETTER W WITH RING ABOVE -->
+&#x0059;&#x030A;x <!-- LATIN SMALL LETTER Y WITH RING ABOVE -->
+&#x0041;&#x02BE;x <!-- LATIN SMALL LETTER A WITH RIGHT HALF RING -->
 &#x1E60;x
 &#x1EA0;x
 &#x1EA2;x
@@ -744,13 +744,13 @@
 &#x1F4B;x
 &#x1F4C;x
 &#x1F4D;x
-&#x03A5;&#x0313;x 
+&#x03A5;&#x0313;x <!-- GREEK SMALL LETTER UPSILON WITH PSILI -->
 &#x1F59;x
-&#x03A5;&#x0313;&#x0300;x 
+&#x03A5;&#x0313;&#x0300;x <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND VARIA -->
 &#x1F5B;x
-&#x03A5;&#x0313;&#x0301;x 
+&#x03A5;&#x0313;&#x0301;x <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND OXIA -->
 &#x1F5D;x
-&#x03A5;&#x0313;&#x0342;x 
+&#x03A5;&#x0313;&#x0342;x <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND PERISPOMENI -->
 &#x1F5F;x
 &#x1F68;x
 &#x1F69;x
@@ -774,62 +774,62 @@
 &#x1FEB;x
 &#x1FFA;x
 &#x1FFB;x
-&#x1F88;x 
-&#x1F89;x 
-&#x1F8A;x 
-&#x1F8B;x 
-&#x1F8C;x 
-&#x1F8D;x 
-&#x1F8E;x 
-&#x1F8F;x 
-&#x1F98;x 
-&#x1F99;x 
-&#x1F9A;x 
-&#x1F9B;x 
-&#x1F9C;x 
-&#x1F9D;x 
-&#x1F9E;x 
-&#x1F9F;x 
-&#x1FA8;x 
-&#x1FA9;x 
-&#x1FAA;x 
-&#x1FAB;x 
-&#x1FAC;x 
-&#x1FAD;x 
-&#x1FAE;x 
-&#x1FAF;x 
+&#x1F88;x <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F89;x <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F8A;x <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F8B;x <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F8C;x <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F8D;x <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F8E;x <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F8F;x <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F98;x <!-- GREEK SMALL LETTER ETA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F99;x <!-- GREEK SMALL LETTER ETA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F9A;x <!-- GREEK SMALL LETTER ETA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F9B;x <!-- GREEK SMALL LETTER ETA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F9C;x <!-- GREEK SMALL LETTER ETA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F9D;x <!-- GREEK SMALL LETTER ETA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F9E;x <!-- GREEK SMALL LETTER ETA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F9F;x <!-- GREEK SMALL LETTER ETA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FA8;x <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1FA9;x <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1FAA;x <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1FAB;x <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1FAC;x <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1FAD;x <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1FAE;x <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FAF;x <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
 &#x1FB8;x
 &#x1FB9;x
-&#x1FBA;&#x0345;x 
-&#x1FBC;x 
-&#x0386;&#x0345;x 
-&#x0391;&#x0342;x 
-&#x0391;&#x0342;&#x0345;x 
+&#x1FBA;&#x0345;x <!-- GREEK SMALL LETTER ALPHA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FBC;x <!-- GREEK SMALL LETTER ALPHA WITH YPOGEGRAMMENI -->
+&#x0386;&#x0345;x <!-- GREEK SMALL LETTER ALPHA WITH OXIA AND YPOGEGRAMMENI -->
+&#x0391;&#x0342;x <!-- GREEK SMALL LETTER ALPHA WITH PERISPOMENI -->
+&#x0391;&#x0342;&#x0345;x <!-- GREEK SMALL LETTER ALPHA WITH PERISPOMENI AND YPOGEGRAMMENI -->
 &#x0399;x
-&#x1FCA;&#x0345;x 
-&#x1FCC;x 
-&#x0389;&#x0345;x 
-&#x0397;&#x0342;x 
-&#x0397;&#x0342;&#x0345;x 
+&#x1FCA;&#x0345;x <!-- GREEK SMALL LETTER ETA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FCC;x <!-- GREEK SMALL LETTER ETA WITH YPOGEGRAMMENI -->
+&#x0389;&#x0345;x <!-- GREEK SMALL LETTER ETA WITH OXIA AND YPOGEGRAMMENI -->
+&#x0397;&#x0342;x <!-- GREEK SMALL LETTER ETA WITH PERISPOMENI -->
+&#x0397;&#x0342;&#x0345;x <!-- GREEK SMALL LETTER ETA WITH PERISPOMENI AND YPOGEGRAMMENI -->
 &#x1FD8;x
 &#x1FD9;x
-&#x03AA;&#x0300;x 
-&#x03AA;&#x0301;x 
-&#x0399;&#x0342;x 
-&#x03AA;&#x0342;x 
+&#x03AA;&#x0300;x <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND VARIA -->
+&#x03AA;&#x0301;x <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND OXIA -->
+&#x0399;&#x0342;x <!-- GREEK SMALL LETTER IOTA WITH PERISPOMENI -->
+&#x03AA;&#x0342;x <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND PERISPOMENI -->
 &#x1FE8;x
 &#x1FE9;x
-&#x03AB;&#x0300;x 
-&#x03AB;&#x0301;x 
-&#x03A1;&#x0313;x 
+&#x03AB;&#x0300;x <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND VARIA -->
+&#x03AB;&#x0301;x <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND OXIA -->
+&#x03A1;&#x0313;x <!-- GREEK SMALL LETTER RHO WITH PSILI -->
 &#x1FEC;x
-&#x03A5;&#x0342;x 
-&#x03AB;&#x0342;x 
-&#x1FFA;&#x0345;x 
-&#x1FFC;x 
-&#x038F;&#x0345;x 
-&#x03A9;&#x0342;x 
-&#x03A9;&#x0342;&#x0345;x 
+&#x03A5;&#x0342;x <!-- GREEK SMALL LETTER UPSILON WITH PERISPOMENI -->
+&#x03AB;&#x0342;x <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND PERISPOMENI -->
+&#x1FFA;&#x0345;x <!-- GREEK SMALL LETTER OMEGA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FFC;x <!-- GREEK SMALL LETTER OMEGA WITH YPOGEGRAMMENI -->
+&#x038F;&#x0345;x <!-- GREEK SMALL LETTER OMEGA WITH OXIA AND YPOGEGRAMMENI -->
+&#x03A9;&#x0342;x <!-- GREEK SMALL LETTER OMEGA WITH PERISPOMENI -->
+&#x03A9;&#x0342;&#x0345;x <!-- GREEK SMALL LETTER OMEGA WITH PERISPOMENI AND YPOGEGRAMMENI -->
 &#x2132;x
 &#x2160;x
 &#x2161;x
@@ -921,6 +921,7 @@
 &#x2C2C;x
 &#x2C2D;x
 &#x2C2E;x
+&#x2C2F;x
 &#x2C60;x
 &#x023A;x
 &#x023E;x
@@ -1124,9 +1125,13 @@
 &#xA7BA;x
 &#xA7BC;x
 &#xA7BE;x
+&#xA7C0;x
 &#xA7C2;x
 &#xA7C7;x
 &#xA7C9;x
+&#xA7D0;x
+&#xA7D6;x
+&#xA7D8;x
 &#xA7F5;x
 &#xA7B3;x
 &#x13A0;x
@@ -1209,18 +1214,18 @@
 &#x13ED;x
 &#x13EE;x
 &#x13EF;x
-&#x0046;&#x0066;x 
-&#x0046;&#x0069;x 
-&#x0046;&#x006C;x 
-&#x0046;&#x0066;&#x0069;x 
-&#x0046;&#x0066;&#x006C;x 
-&#x0053;&#x0074;x 
-&#x0053;&#x0074;x 
-&#x0544;&#x0576;x 
-&#x0544;&#x0565;x 
-&#x0544;&#x056B;x 
-&#x054E;&#x0576;x 
-&#x0544;&#x056D;x 
+&#x0046;&#x0066;x <!-- LATIN SMALL LIGATURE FF -->
+&#x0046;&#x0069;x <!-- LATIN SMALL LIGATURE FI -->
+&#x0046;&#x006C;x <!-- LATIN SMALL LIGATURE FL -->
+&#x0046;&#x0066;&#x0069;x <!-- LATIN SMALL LIGATURE FFI -->
+&#x0046;&#x0066;&#x006C;x <!-- LATIN SMALL LIGATURE FFL -->
+&#x0053;&#x0074;x <!-- LATIN SMALL LIGATURE LONG S T -->
+&#x0053;&#x0074;x <!-- LATIN SMALL LIGATURE ST -->
+&#x0544;&#x0576;x <!-- ARMENIAN SMALL LIGATURE MEN NOW -->
+&#x0544;&#x0565;x <!-- ARMENIAN SMALL LIGATURE MEN ECH -->
+&#x0544;&#x056B;x <!-- ARMENIAN SMALL LIGATURE MEN INI -->
+&#x054E;&#x0576;x <!-- ARMENIAN SMALL LIGATURE VEW NOW -->
+&#x0544;&#x056D;x <!-- ARMENIAN SMALL LIGATURE MEN XEH -->
 &#xFF21;x
 &#xFF22;x
 &#xFF23;x
@@ -1323,6 +1328,41 @@
 &#x104D1;x
 &#x104D2;x
 &#x104D3;x
+&#x10570;x
+&#x10571;x
+&#x10572;x
+&#x10573;x
+&#x10574;x
+&#x10575;x
+&#x10576;x
+&#x10577;x
+&#x10578;x
+&#x10579;x
+&#x1057A;x
+&#x1057C;x
+&#x1057D;x
+&#x1057E;x
+&#x1057F;x
+&#x10580;x
+&#x10581;x
+&#x10582;x
+&#x10583;x
+&#x10584;x
+&#x10585;x
+&#x10586;x
+&#x10587;x
+&#x10588;x
+&#x10589;x
+&#x1058A;x
+&#x1058C;x
+&#x1058D;x
+&#x1058E;x
+&#x1058F;x
+&#x10590;x
+&#x10591;x
+&#x10592;x
+&#x10594;x
+&#x10595;x
 &#x10C80;x
 &#x10C81;x
 &#x10C82;x
