--- a/layout/reftests/text-transform/all-title.html
+++ b/layout/reftests/text-transform/all-title.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- GENERATED FILE, DO NOT EDIT -->
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -37,7 +37,7 @@
 &#x0079;x
 &#x007A;x
 &#x00B5;x
-&#x00DF;x 
+&#x00DF;x <!-- LATIN SMALL LETTER SHARP S -->
 &#x00E0;x
 &#x00E1;x
 &#x00E2;x
@@ -105,7 +105,7 @@
 &#x0144;x
 &#x0146;x
 &#x0148;x
-&#x0149;x 
+&#x0149;x <!-- LATIN SMALL LETTER N PRECEDED BY APOSTROPHE -->
 &#x014B;x
 &#x014D;x
 &#x014F;x
@@ -181,7 +181,7 @@
 &#x01EB;x
 &#x01ED;x
 &#x01EF;x
-&#x01F0;x 
+&#x01F0;x <!-- LATIN SMALL LETTER J WITH CARON -->
 &#x01F1;x
 &#x01F2;x
 &#x01F3;x
@@ -268,12 +268,12 @@
 &#x037B;x
 &#x037C;x
 &#x037D;x
-&#x0390;x 
+&#x0390;x <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND TONOS -->
 &#x03AC;x
 &#x03AD;x
 &#x03AE;x
 &#x03AF;x
-&#x03B0;x 
+&#x03B0;x <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND TONOS -->
 &#x03B1;x
 &#x03B2;x
 &#x03B3;x
@@ -514,7 +514,7 @@
 &#x0584;x
 &#x0585;x
 &#x0586;x
-&#x0587;x 
+&#x0587;x <!-- ARMENIAN SMALL LIGATURE ECH YIWN -->
 &#x10D0;x
 &#x10D1;x
 &#x10D2;x
@@ -654,11 +654,11 @@
 &#x1E91;x
 &#x1E93;x
 &#x1E95;x
-&#x1E96;x 
-&#x1E97;x 
-&#x1E98;x 
-&#x1E99;x 
-&#x1E9A;x 
+&#x1E96;x <!-- LATIN SMALL LETTER H WITH LINE BELOW -->
+&#x1E97;x <!-- LATIN SMALL LETTER T WITH DIAERESIS -->
+&#x1E98;x <!-- LATIN SMALL LETTER W WITH RING ABOVE -->
+&#x1E99;x <!-- LATIN SMALL LETTER Y WITH RING ABOVE -->
+&#x1E9A;x <!-- LATIN SMALL LETTER A WITH RIGHT HALF RING -->
 &#x1E9B;x
 &#x1EA1;x
 &#x1EA3;x
@@ -744,13 +744,13 @@
 &#x1F43;x
 &#x1F44;x
 &#x1F45;x
-&#x1F50;x 
+&#x1F50;x <!-- GREEK SMALL LETTER UPSILON WITH PSILI -->
 &#x1F51;x
-&#x1F52;x 
+&#x1F52;x <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND VARIA -->
 &#x1F53;x
-&#x1F54;x 
+&#x1F54;x <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND OXIA -->
 &#x1F55;x
-&#x1F56;x 
+&#x1F56;x <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND PERISPOMENI -->
 &#x1F57;x
 &#x1F60;x
 &#x1F61;x
@@ -774,62 +774,62 @@
 &#x1F7B;x
 &#x1F7C;x
 &#x1F7D;x
-&#x1F80;x 
-&#x1F81;x 
-&#x1F82;x 
-&#x1F83;x 
-&#x1F84;x 
-&#x1F85;x 
-&#x1F86;x 
-&#x1F87;x 
-&#x1F90;x 
-&#x1F91;x 
-&#x1F92;x 
-&#x1F93;x 
-&#x1F94;x 
-&#x1F95;x 
-&#x1F96;x 
-&#x1F97;x 
-&#x1FA0;x 
-&#x1FA1;x 
-&#x1FA2;x 
-&#x1FA3;x 
-&#x1FA4;x 
-&#x1FA5;x 
-&#x1FA6;x 
-&#x1FA7;x 
+&#x1F80;x <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F81;x <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F82;x <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F83;x <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F84;x <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F85;x <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F86;x <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F87;x <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F90;x <!-- GREEK SMALL LETTER ETA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F91;x <!-- GREEK SMALL LETTER ETA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F92;x <!-- GREEK SMALL LETTER ETA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F93;x <!-- GREEK SMALL LETTER ETA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F94;x <!-- GREEK SMALL LETTER ETA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F95;x <!-- GREEK SMALL LETTER ETA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F96;x <!-- GREEK SMALL LETTER ETA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F97;x <!-- GREEK SMALL LETTER ETA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FA0;x <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1FA1;x <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1FA2;x <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1FA3;x <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1FA4;x <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1FA5;x <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1FA6;x <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FA7;x <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
 &#x1FB0;x
 &#x1FB1;x
-&#x1FB2;x 
-&#x1FB3;x 
-&#x1FB4;x 
-&#x1FB6;x 
-&#x1FB7;x 
+&#x1FB2;x <!-- GREEK SMALL LETTER ALPHA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FB3;x <!-- GREEK SMALL LETTER ALPHA WITH YPOGEGRAMMENI -->
+&#x1FB4;x <!-- GREEK SMALL LETTER ALPHA WITH OXIA AND YPOGEGRAMMENI -->
+&#x1FB6;x <!-- GREEK SMALL LETTER ALPHA WITH PERISPOMENI -->
+&#x1FB7;x <!-- GREEK SMALL LETTER ALPHA WITH PERISPOMENI AND YPOGEGRAMMENI -->
 &#x1FBE;x
-&#x1FC2;x 
-&#x1FC3;x 
-&#x1FC4;x 
-&#x1FC6;x 
-&#x1FC7;x 
+&#x1FC2;x <!-- GREEK SMALL LETTER ETA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FC3;x <!-- GREEK SMALL LETTER ETA WITH YPOGEGRAMMENI -->
+&#x1FC4;x <!-- GREEK SMALL LETTER ETA WITH OXIA AND YPOGEGRAMMENI -->
+&#x1FC6;x <!-- GREEK SMALL LETTER ETA WITH PERISPOMENI -->
+&#x1FC7;x <!-- GREEK SMALL LETTER ETA WITH PERISPOMENI AND YPOGEGRAMMENI -->
 &#x1FD0;x
 &#x1FD1;x
-&#x1FD2;x 
-&#x1FD3;x 
-&#x1FD6;x 
-&#x1FD7;x 
+&#x1FD2;x <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND VARIA -->
+&#x1FD3;x <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND OXIA -->
+&#x1FD6;x <!-- GREEK SMALL LETTER IOTA WITH PERISPOMENI -->
+&#x1FD7;x <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND PERISPOMENI -->
 &#x1FE0;x
 &#x1FE1;x
-&#x1FE2;x 
-&#x1FE3;x 
-&#x1FE4;x 
+&#x1FE2;x <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND VARIA -->
+&#x1FE3;x <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND OXIA -->
+&#x1FE4;x <!-- GREEK SMALL LETTER RHO WITH PSILI -->
 &#x1FE5;x
-&#x1FE6;x 
-&#x1FE7;x 
-&#x1FF2;x 
-&#x1FF3;x 
-&#x1FF4;x 
-&#x1FF6;x 
-&#x1FF7;x 
+&#x1FE6;x <!-- GREEK SMALL LETTER UPSILON WITH PERISPOMENI -->
+&#x1FE7;x <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND PERISPOMENI -->
+&#x1FF2;x <!-- GREEK SMALL LETTER OMEGA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FF3;x <!-- GREEK SMALL LETTER OMEGA WITH YPOGEGRAMMENI -->
+&#x1FF4;x <!-- GREEK SMALL LETTER OMEGA WITH OXIA AND YPOGEGRAMMENI -->
+&#x1FF6;x <!-- GREEK SMALL LETTER OMEGA WITH PERISPOMENI -->
+&#x1FF7;x <!-- GREEK SMALL LETTER OMEGA WITH PERISPOMENI AND YPOGEGRAMMENI -->
 &#x214E;x
 &#x2170;x
 &#x2171;x
@@ -921,6 +921,7 @@
 &#x2C5C;x
 &#x2C5D;x
 &#x2C5E;x
+&#x2C5F;x
 &#x2C61;x
 &#x2C65;x
 &#x2C66;x
@@ -1124,9 +1125,13 @@
 &#xA7BB;x
 &#xA7BD;x
 &#xA7BF;x
+&#xA7C1;x
 &#xA7C3;x
 &#xA7C8;x
 &#xA7CA;x
+&#xA7D1;x
+&#xA7D7;x
+&#xA7D9;x
 &#xA7F6;x
 &#xAB53;x
 &#xAB70;x
@@ -1209,18 +1214,18 @@
 &#xABBD;x
 &#xABBE;x
 &#xABBF;x
-&#xFB00;x 
-&#xFB01;x 
-&#xFB02;x 
-&#xFB03;x 
-&#xFB04;x 
-&#xFB05;x 
-&#xFB06;x 
-&#xFB13;x 
-&#xFB14;x 
-&#xFB15;x 
-&#xFB16;x 
-&#xFB17;x 
+&#xFB00;x <!-- LATIN SMALL LIGATURE FF -->
+&#xFB01;x <!-- LATIN SMALL LIGATURE FI -->
+&#xFB02;x <!-- LATIN SMALL LIGATURE FL -->
+&#xFB03;x <!-- LATIN SMALL LIGATURE FFI -->
+&#xFB04;x <!-- LATIN SMALL LIGATURE FFL -->
+&#xFB05;x <!-- LATIN SMALL LIGATURE LONG S T -->
+&#xFB06;x <!-- LATIN SMALL LIGATURE ST -->
+&#xFB13;x <!-- ARMENIAN SMALL LIGATURE MEN NOW -->
+&#xFB14;x <!-- ARMENIAN SMALL LIGATURE MEN ECH -->
+&#xFB15;x <!-- ARMENIAN SMALL LIGATURE MEN INI -->
+&#xFB16;x <!-- ARMENIAN SMALL LIGATURE VEW NOW -->
+&#xFB17;x <!-- ARMENIAN SMALL LIGATURE MEN XEH -->
 &#xFF41;x
 &#xFF42;x
 &#xFF43;x
@@ -1323,6 +1328,41 @@
 &#x104F9;x
 &#x104FA;x
 &#x104FB;x
+&#x10597;x
+&#x10598;x
+&#x10599;x
+&#x1059A;x
+&#x1059B;x
+&#x1059C;x
+&#x1059D;x
+&#x1059E;x
+&#x1059F;x
+&#x105A0;x
+&#x105A1;x
+&#x105A3;x
+&#x105A4;x
+&#x105A5;x
+&#x105A6;x
+&#x105A7;x
+&#x105A8;x
+&#x105A9;x
+&#x105AA;x
+&#x105AB;x
+&#x105AC;x
+&#x105AD;x
+&#x105AE;x
+&#x105AF;x
+&#x105B0;x
+&#x105B1;x
+&#x105B3;x
+&#x105B4;x
+&#x105B5;x
+&#x105B6;x
+&#x105B7;x
+&#x105B8;x
+&#x105B9;x
+&#x105BB;x
+&#x105BC;x
 &#x10CC0;x
 &#x10CC1;x
 &#x10CC2;x
