--- a/layout/reftests/text-transform/all-upper-ref.html
+++ b/layout/reftests/text-transform/all-upper-ref.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- GENERATED FILE, DO NOT EDIT -->
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -37,7 +37,7 @@
 &#x0059;
 &#x005A;
 &#x039C;
-&#x0053;&#x0053; 
+&#x0053;&#x0053; <!-- LATIN SMALL LETTER SHARP S -->
 &#x00C0;
 &#x00C1;
 &#x00C2;
@@ -105,7 +105,7 @@
 &#x0143;
 &#x0145;
 &#x0147;
-&#x02BC;&#x004E; 
+&#x02BC;&#x004E; <!-- LATIN SMALL LETTER N PRECEDED BY APOSTROPHE -->
 &#x014A;
 &#x014C;
 &#x014E;
@@ -178,7 +178,7 @@
 &#x01EA;
 &#x01EC;
 &#x01EE;
-&#x004A;&#x030C; 
+&#x004A;&#x030C; <!-- LATIN SMALL LETTER J WITH CARON -->
 &#x01F1;
 &#x01F1;
 &#x01F4;
@@ -264,12 +264,12 @@
 &#x03FD;
 &#x03FE;
 &#x03FF;
-&#x03AA;&#x0301; 
+&#x03AA;&#x0301; <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND TONOS -->
 &#x0386;
 &#x0388;
 &#x0389;
 &#x038A;
-&#x03AB;&#x0301; 
+&#x03AB;&#x0301; <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND TONOS -->
 &#x0391;
 &#x0392;
 &#x0393;
@@ -510,53 +510,53 @@
 &#x0554;
 &#x0555;
 &#x0556;
-&#x0535;&#x0552; 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+&#x0535;&#x0552; <!-- ARMENIAN SMALL LIGATURE ECH YIWN -->
+<!-- &#x1C90; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C91; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C92; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C93; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C94; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C95; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C96; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C97; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C98; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C99; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C9A; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C9B; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C9C; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C9D; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C9E; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1C9F; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA0; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA1; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA2; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA3; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA4; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA5; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA6; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA7; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA8; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CA9; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CAA; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CAB; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CAC; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CAD; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CAE; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CAF; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB0; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB1; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB2; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB3; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB4; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB5; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB6; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB7; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB8; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CB9; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CBA; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CBD; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CBE; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x1CBF; --> <!-- Temporarily skipped, see bug 1476304. -->
 &#x13F0;
 &#x13F1;
 &#x13F2;
@@ -650,11 +650,11 @@
 &#x1E90;
 &#x1E92;
 &#x1E94;
-&#x0048;&#x0331; 
-&#x0054;&#x0308; 
-&#x0057;&#x030A; 
-&#x0059;&#x030A; 
-&#x0041;&#x02BE; 
+&#x0048;&#x0331; <!-- LATIN SMALL LETTER H WITH LINE BELOW -->
+&#x0054;&#x0308; <!-- LATIN SMALL LETTER T WITH DIAERESIS -->
+&#x0057;&#x030A; <!-- LATIN SMALL LETTER W WITH RING ABOVE -->
+&#x0059;&#x030A; <!-- LATIN SMALL LETTER Y WITH RING ABOVE -->
+&#x0041;&#x02BE; <!-- LATIN SMALL LETTER A WITH RIGHT HALF RING -->
 &#x1E60;
 &#x1EA0;
 &#x1EA2;
@@ -740,13 +740,13 @@
 &#x1F4B;
 &#x1F4C;
 &#x1F4D;
-&#x03A5;&#x0313; 
+&#x03A5;&#x0313; <!-- GREEK SMALL LETTER UPSILON WITH PSILI -->
 &#x1F59;
-&#x03A5;&#x0313;&#x0300; 
+&#x03A5;&#x0313;&#x0300; <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND VARIA -->
 &#x1F5B;
-&#x03A5;&#x0313;&#x0301; 
+&#x03A5;&#x0313;&#x0301; <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND OXIA -->
 &#x1F5D;
-&#x03A5;&#x0313;&#x0342; 
+&#x03A5;&#x0313;&#x0342; <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND PERISPOMENI -->
 &#x1F5F;
 &#x1F68;
 &#x1F69;
@@ -770,89 +770,89 @@
 &#x1FEB;
 &#x1FFA;
 &#x1FFB;
-&#x1F08;&#x0399; 
-&#x1F09;&#x0399; 
-&#x1F0A;&#x0399; 
-&#x1F0B;&#x0399; 
-&#x1F0C;&#x0399; 
-&#x1F0D;&#x0399; 
-&#x1F0E;&#x0399; 
-&#x1F0F;&#x0399; 
-&#x1F08;&#x0399; 
-&#x1F09;&#x0399; 
-&#x1F0A;&#x0399; 
-&#x1F0B;&#x0399; 
-&#x1F0C;&#x0399; 
-&#x1F0D;&#x0399; 
-&#x1F0E;&#x0399; 
-&#x1F0F;&#x0399; 
-&#x1F28;&#x0399; 
-&#x1F29;&#x0399; 
-&#x1F2A;&#x0399; 
-&#x1F2B;&#x0399; 
-&#x1F2C;&#x0399; 
-&#x1F2D;&#x0399; 
-&#x1F2E;&#x0399; 
-&#x1F2F;&#x0399; 
-&#x1F28;&#x0399; 
-&#x1F29;&#x0399; 
-&#x1F2A;&#x0399; 
-&#x1F2B;&#x0399; 
-&#x1F2C;&#x0399; 
-&#x1F2D;&#x0399; 
-&#x1F2E;&#x0399; 
-&#x1F2F;&#x0399; 
-&#x1F68;&#x0399; 
-&#x1F69;&#x0399; 
-&#x1F6A;&#x0399; 
-&#x1F6B;&#x0399; 
-&#x1F6C;&#x0399; 
-&#x1F6D;&#x0399; 
-&#x1F6E;&#x0399; 
-&#x1F6F;&#x0399; 
-&#x1F68;&#x0399; 
-&#x1F69;&#x0399; 
-&#x1F6A;&#x0399; 
-&#x1F6B;&#x0399; 
-&#x1F6C;&#x0399; 
-&#x1F6D;&#x0399; 
-&#x1F6E;&#x0399; 
-&#x1F6F;&#x0399; 
+&#x1F08;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F09;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F0A;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F0B;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F0C;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F0D;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F0E;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F0F;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F08;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F09;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F0A;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F0B;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F0C;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F0D;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F0E;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F0F;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F28;&#x0399; <!-- GREEK SMALL LETTER ETA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F29;&#x0399; <!-- GREEK SMALL LETTER ETA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F2A;&#x0399; <!-- GREEK SMALL LETTER ETA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F2B;&#x0399; <!-- GREEK SMALL LETTER ETA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F2C;&#x0399; <!-- GREEK SMALL LETTER ETA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F2D;&#x0399; <!-- GREEK SMALL LETTER ETA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F2E;&#x0399; <!-- GREEK SMALL LETTER ETA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F2F;&#x0399; <!-- GREEK SMALL LETTER ETA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F28;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F29;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F2A;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F2B;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F2C;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F2D;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F2E;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F2F;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F68;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F69;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F6A;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F6B;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F6C;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F6D;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F6E;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F6F;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F68;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F69;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F6A;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F6B;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F6C;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F6D;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F6E;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F6F;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
 &#x1FB8;
 &#x1FB9;
-&#x1FBA;&#x0399; 
-&#x0391;&#x0399; 
-&#x0386;&#x0399; 
-&#x0391;&#x0342; 
-&#x0391;&#x0342;&#x0399; 
-&#x0391;&#x0399; 
+&#x1FBA;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH VARIA AND YPOGEGRAMMENI -->
+&#x0391;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH YPOGEGRAMMENI -->
+&#x0386;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH OXIA AND YPOGEGRAMMENI -->
+&#x0391;&#x0342; <!-- GREEK SMALL LETTER ALPHA WITH PERISPOMENI -->
+&#x0391;&#x0342;&#x0399; <!-- GREEK SMALL LETTER ALPHA WITH PERISPOMENI AND YPOGEGRAMMENI -->
+&#x0391;&#x0399; <!-- GREEK CAPITAL LETTER ALPHA WITH PROSGEGRAMMENI -->
 &#x0399;
-&#x1FCA;&#x0399; 
-&#x0397;&#x0399; 
-&#x0389;&#x0399; 
-&#x0397;&#x0342; 
-&#x0397;&#x0342;&#x0399; 
-&#x0397;&#x0399; 
+&#x1FCA;&#x0399; <!-- GREEK SMALL LETTER ETA WITH VARIA AND YPOGEGRAMMENI -->
+&#x0397;&#x0399; <!-- GREEK SMALL LETTER ETA WITH YPOGEGRAMMENI -->
+&#x0389;&#x0399; <!-- GREEK SMALL LETTER ETA WITH OXIA AND YPOGEGRAMMENI -->
+&#x0397;&#x0342; <!-- GREEK SMALL LETTER ETA WITH PERISPOMENI -->
+&#x0397;&#x0342;&#x0399; <!-- GREEK SMALL LETTER ETA WITH PERISPOMENI AND YPOGEGRAMMENI -->
+&#x0397;&#x0399; <!-- GREEK CAPITAL LETTER ETA WITH PROSGEGRAMMENI -->
 &#x1FD8;
 &#x1FD9;
-&#x03AA;&#x0300; 
-&#x03AA;&#x0301; 
-&#x0399;&#x0342; 
-&#x03AA;&#x0342; 
+&#x03AA;&#x0300; <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND VARIA -->
+&#x03AA;&#x0301; <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND OXIA -->
+&#x0399;&#x0342; <!-- GREEK SMALL LETTER IOTA WITH PERISPOMENI -->
+&#x03AA;&#x0342; <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND PERISPOMENI -->
 &#x1FE8;
 &#x1FE9;
-&#x03AB;&#x0300; 
-&#x03AB;&#x0301; 
-&#x03A1;&#x0313; 
+&#x03AB;&#x0300; <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND VARIA -->
+&#x03AB;&#x0301; <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND OXIA -->
+&#x03A1;&#x0313; <!-- GREEK SMALL LETTER RHO WITH PSILI -->
 &#x1FEC;
-&#x03A5;&#x0342; 
-&#x03AB;&#x0342; 
-&#x1FFA;&#x0399; 
-&#x03A9;&#x0399; 
-&#x038F;&#x0399; 
-&#x03A9;&#x0342; 
-&#x03A9;&#x0342;&#x0399; 
-&#x03A9;&#x0399; 
+&#x03A5;&#x0342; <!-- GREEK SMALL LETTER UPSILON WITH PERISPOMENI -->
+&#x03AB;&#x0342; <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND PERISPOMENI -->
+&#x1FFA;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH VARIA AND YPOGEGRAMMENI -->
+&#x03A9;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH YPOGEGRAMMENI -->
+&#x038F;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH OXIA AND YPOGEGRAMMENI -->
+&#x03A9;&#x0342; <!-- GREEK SMALL LETTER OMEGA WITH PERISPOMENI -->
+&#x03A9;&#x0342;&#x0399; <!-- GREEK SMALL LETTER OMEGA WITH PERISPOMENI AND YPOGEGRAMMENI -->
+&#x03A9;&#x0399; <!-- GREEK CAPITAL LETTER OMEGA WITH PROSGEGRAMMENI -->
 &#x2132;
 &#x2160;
 &#x2161;
@@ -944,6 +944,7 @@
 &#x2C2C;
 &#x2C2D;
 &#x2C2E;
+&#x2C2F;
 &#x2C60;
 &#x023A;
 &#x023E;
@@ -1147,9 +1148,13 @@
 &#xA7BA;
 &#xA7BC;
 &#xA7BE;
+&#xA7C0;
 &#xA7C2;
 &#xA7C7;
 &#xA7C9;
+&#xA7D0;
+&#xA7D6;
+&#xA7D8;
 &#xA7F5;
 &#xA7B3;
 &#x13A0;
@@ -1232,18 +1237,18 @@
 &#x13ED;
 &#x13EE;
 &#x13EF;
-&#x0046;&#x0046; 
-&#x0046;&#x0049; 
-&#x0046;&#x004C; 
-&#x0046;&#x0046;&#x0049; 
-&#x0046;&#x0046;&#x004C; 
-&#x0053;&#x0054; 
-&#x0053;&#x0054; 
-&#x0544;&#x0546; 
-&#x0544;&#x0535; 
-&#x0544;&#x053B; 
-&#x054E;&#x0546; 
-&#x0544;&#x053D; 
+&#x0046;&#x0046; <!-- LATIN SMALL LIGATURE FF -->
+&#x0046;&#x0049; <!-- LATIN SMALL LIGATURE FI -->
+&#x0046;&#x004C; <!-- LATIN SMALL LIGATURE FL -->
+&#x0046;&#x0046;&#x0049; <!-- LATIN SMALL LIGATURE FFI -->
+&#x0046;&#x0046;&#x004C; <!-- LATIN SMALL LIGATURE FFL -->
+&#x0053;&#x0054; <!-- LATIN SMALL LIGATURE LONG S T -->
+&#x0053;&#x0054; <!-- LATIN SMALL LIGATURE ST -->
+&#x0544;&#x0546; <!-- ARMENIAN SMALL LIGATURE MEN NOW -->
+&#x0544;&#x0535; <!-- ARMENIAN SMALL LIGATURE MEN ECH -->
+&#x0544;&#x053B; <!-- ARMENIAN SMALL LIGATURE MEN INI -->
+&#x054E;&#x0546; <!-- ARMENIAN SMALL LIGATURE VEW NOW -->
+&#x0544;&#x053D; <!-- ARMENIAN SMALL LIGATURE MEN XEH -->
 &#xFF21;
 &#xFF22;
 &#xFF23;
@@ -1346,6 +1351,41 @@
 &#x104D1;
 &#x104D2;
 &#x104D3;
+&#x10570;
+&#x10571;
+&#x10572;
+&#x10573;
+&#x10574;
+&#x10575;
+&#x10576;
+&#x10577;
+&#x10578;
+&#x10579;
+&#x1057A;
+&#x1057C;
+&#x1057D;
+&#x1057E;
+&#x1057F;
+&#x10580;
+&#x10581;
+&#x10582;
+&#x10583;
+&#x10584;
+&#x10585;
+&#x10586;
+&#x10587;
+&#x10588;
+&#x10589;
+&#x1058A;
+&#x1058C;
+&#x1058D;
+&#x1058E;
+&#x1058F;
+&#x10590;
+&#x10591;
+&#x10592;
+&#x10594;
+&#x10595;
 &#x10C80;
 &#x10C81;
 &#x10C82;
