--- a/layout/reftests/text-transform/all-upper.html
+++ b/layout/reftests/text-transform/all-upper.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- GENERATED FILE, DO NOT EDIT -->
 <html>
  <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -37,7 +37,7 @@
 &#x0079;
 &#x007A;
 &#x00B5;
-&#x00DF; 
+&#x00DF; <!-- LATIN SMALL LETTER SHARP S -->
 &#x00E0;
 &#x00E1;
 &#x00E2;
@@ -105,7 +105,7 @@
 &#x0144;
 &#x0146;
 &#x0148;
-&#x0149; 
+&#x0149; <!-- LATIN SMALL LETTER N PRECEDED BY APOSTROPHE -->
 &#x014B;
 &#x014D;
 &#x014F;
@@ -178,7 +178,7 @@
 &#x01EB;
 &#x01ED;
 &#x01EF;
-&#x01F0; 
+&#x01F0; <!-- LATIN SMALL LETTER J WITH CARON -->
 &#x01F2;
 &#x01F3;
 &#x01F5;
@@ -264,12 +264,12 @@
 &#x037B;
 &#x037C;
 &#x037D;
-&#x0390; 
+&#x0390; <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND TONOS -->
 &#x03AC;
 &#x03AD;
 &#x03AE;
 &#x03AF;
-&#x03B0; 
+&#x03B0; <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND TONOS -->
 &#x03B1;
 &#x03B2;
 &#x03B3;
@@ -510,53 +510,53 @@
 &#x0584;
 &#x0585;
 &#x0586;
-&#x0587; 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+&#x0587; <!-- ARMENIAN SMALL LIGATURE ECH YIWN -->
+<!-- &#x10D0; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D1; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D2; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D3; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D4; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D5; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D6; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D7; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D8; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10D9; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10DA; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10DB; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10DC; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10DD; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10DE; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10DF; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E0; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E1; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E2; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E3; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E4; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E5; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E6; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E7; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E8; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10E9; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10EA; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10EB; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10EC; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10ED; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10EE; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10EF; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F0; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F1; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F2; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F3; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F4; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F5; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F6; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F7; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F8; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10F9; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10FA; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10FD; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10FE; --> <!-- Temporarily skipped, see bug 1476304. -->
+<!-- &#x10FF; --> <!-- Temporarily skipped, see bug 1476304. -->
 &#x13F8;
 &#x13F9;
 &#x13FA;
@@ -650,11 +650,11 @@
 &#x1E91;
 &#x1E93;
 &#x1E95;
-&#x1E96; 
-&#x1E97; 
-&#x1E98; 
-&#x1E99; 
-&#x1E9A; 
+&#x1E96; <!-- LATIN SMALL LETTER H WITH LINE BELOW -->
+&#x1E97; <!-- LATIN SMALL LETTER T WITH DIAERESIS -->
+&#x1E98; <!-- LATIN SMALL LETTER W WITH RING ABOVE -->
+&#x1E99; <!-- LATIN SMALL LETTER Y WITH RING ABOVE -->
+&#x1E9A; <!-- LATIN SMALL LETTER A WITH RIGHT HALF RING -->
 &#x1E9B;
 &#x1EA1;
 &#x1EA3;
@@ -740,13 +740,13 @@
 &#x1F43;
 &#x1F44;
 &#x1F45;
-&#x1F50; 
+&#x1F50; <!-- GREEK SMALL LETTER UPSILON WITH PSILI -->
 &#x1F51;
-&#x1F52; 
+&#x1F52; <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND VARIA -->
 &#x1F53;
-&#x1F54; 
+&#x1F54; <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND OXIA -->
 &#x1F55;
-&#x1F56; 
+&#x1F56; <!-- GREEK SMALL LETTER UPSILON WITH PSILI AND PERISPOMENI -->
 &#x1F57;
 &#x1F60;
 &#x1F61;
@@ -770,89 +770,89 @@
 &#x1F7B;
 &#x1F7C;
 &#x1F7D;
-&#x1F80; 
-&#x1F81; 
-&#x1F82; 
-&#x1F83; 
-&#x1F84; 
-&#x1F85; 
-&#x1F86; 
-&#x1F87; 
-&#x1F88; 
-&#x1F89; 
-&#x1F8A; 
-&#x1F8B; 
-&#x1F8C; 
-&#x1F8D; 
-&#x1F8E; 
-&#x1F8F; 
-&#x1F90; 
-&#x1F91; 
-&#x1F92; 
-&#x1F93; 
-&#x1F94; 
-&#x1F95; 
-&#x1F96; 
-&#x1F97; 
-&#x1F98; 
-&#x1F99; 
-&#x1F9A; 
-&#x1F9B; 
-&#x1F9C; 
-&#x1F9D; 
-&#x1F9E; 
-&#x1F9F; 
-&#x1FA0; 
-&#x1FA1; 
-&#x1FA2; 
-&#x1FA3; 
-&#x1FA4; 
-&#x1FA5; 
-&#x1FA6; 
-&#x1FA7; 
-&#x1FA8; 
-&#x1FA9; 
-&#x1FAA; 
-&#x1FAB; 
-&#x1FAC; 
-&#x1FAD; 
-&#x1FAE; 
-&#x1FAF; 
+&#x1F80; <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F81; <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F82; <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F83; <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F84; <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F85; <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F86; <!-- GREEK SMALL LETTER ALPHA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F87; <!-- GREEK SMALL LETTER ALPHA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F88; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F89; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F8A; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F8B; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F8C; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F8D; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F8E; <!-- GREEK CAPITAL LETTER ALPHA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F8F; <!-- GREEK CAPITAL LETTER ALPHA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F90; <!-- GREEK SMALL LETTER ETA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1F91; <!-- GREEK SMALL LETTER ETA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1F92; <!-- GREEK SMALL LETTER ETA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1F93; <!-- GREEK SMALL LETTER ETA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1F94; <!-- GREEK SMALL LETTER ETA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1F95; <!-- GREEK SMALL LETTER ETA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1F96; <!-- GREEK SMALL LETTER ETA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F97; <!-- GREEK SMALL LETTER ETA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1F98; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1F99; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1F9A; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1F9B; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1F9C; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1F9D; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1F9E; <!-- GREEK CAPITAL LETTER ETA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1F9F; <!-- GREEK CAPITAL LETTER ETA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1FA0; <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND YPOGEGRAMMENI -->
+&#x1FA1; <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND YPOGEGRAMMENI -->
+&#x1FA2; <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND VARIA AND YPOGEGRAMMENI -->
+&#x1FA3; <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND VARIA AND YPOGEGRAMMENI -->
+&#x1FA4; <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND OXIA AND YPOGEGRAMMENI -->
+&#x1FA5; <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND OXIA AND YPOGEGRAMMENI -->
+&#x1FA6; <!-- GREEK SMALL LETTER OMEGA WITH PSILI AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FA7; <!-- GREEK SMALL LETTER OMEGA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FA8; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND PROSGEGRAMMENI -->
+&#x1FA9; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND PROSGEGRAMMENI -->
+&#x1FAA; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND VARIA AND PROSGEGRAMMENI -->
+&#x1FAB; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND VARIA AND PROSGEGRAMMENI -->
+&#x1FAC; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND OXIA AND PROSGEGRAMMENI -->
+&#x1FAD; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND OXIA AND PROSGEGRAMMENI -->
+&#x1FAE; <!-- GREEK CAPITAL LETTER OMEGA WITH PSILI AND PERISPOMENI AND PROSGEGRAMMENI -->
+&#x1FAF; <!-- GREEK CAPITAL LETTER OMEGA WITH DASIA AND PERISPOMENI AND PROSGEGRAMMENI -->
 &#x1FB0;
 &#x1FB1;
-&#x1FB2; 
-&#x1FB3; 
-&#x1FB4; 
-&#x1FB6; 
-&#x1FB7; 
-&#x1FBC; 
+&#x1FB2; <!-- GREEK SMALL LETTER ALPHA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FB3; <!-- GREEK SMALL LETTER ALPHA WITH YPOGEGRAMMENI -->
+&#x1FB4; <!-- GREEK SMALL LETTER ALPHA WITH OXIA AND YPOGEGRAMMENI -->
+&#x1FB6; <!-- GREEK SMALL LETTER ALPHA WITH PERISPOMENI -->
+&#x1FB7; <!-- GREEK SMALL LETTER ALPHA WITH PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FBC; <!-- GREEK CAPITAL LETTER ALPHA WITH PROSGEGRAMMENI -->
 &#x1FBE;
-&#x1FC2; 
-&#x1FC3; 
-&#x1FC4; 
-&#x1FC6; 
-&#x1FC7; 
-&#x1FCC; 
+&#x1FC2; <!-- GREEK SMALL LETTER ETA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FC3; <!-- GREEK SMALL LETTER ETA WITH YPOGEGRAMMENI -->
+&#x1FC4; <!-- GREEK SMALL LETTER ETA WITH OXIA AND YPOGEGRAMMENI -->
+&#x1FC6; <!-- GREEK SMALL LETTER ETA WITH PERISPOMENI -->
+&#x1FC7; <!-- GREEK SMALL LETTER ETA WITH PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FCC; <!-- GREEK CAPITAL LETTER ETA WITH PROSGEGRAMMENI -->
 &#x1FD0;
 &#x1FD1;
-&#x1FD2; 
-&#x1FD3; 
-&#x1FD6; 
-&#x1FD7; 
+&#x1FD2; <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND VARIA -->
+&#x1FD3; <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND OXIA -->
+&#x1FD6; <!-- GREEK SMALL LETTER IOTA WITH PERISPOMENI -->
+&#x1FD7; <!-- GREEK SMALL LETTER IOTA WITH DIALYTIKA AND PERISPOMENI -->
 &#x1FE0;
 &#x1FE1;
-&#x1FE2; 
-&#x1FE3; 
-&#x1FE4; 
+&#x1FE2; <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND VARIA -->
+&#x1FE3; <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND OXIA -->
+&#x1FE4; <!-- GREEK SMALL LETTER RHO WITH PSILI -->
 &#x1FE5;
-&#x1FE6; 
-&#x1FE7; 
-&#x1FF2; 
-&#x1FF3; 
-&#x1FF4; 
-&#x1FF6; 
-&#x1FF7; 
-&#x1FFC; 
+&#x1FE6; <!-- GREEK SMALL LETTER UPSILON WITH PERISPOMENI -->
+&#x1FE7; <!-- GREEK SMALL LETTER UPSILON WITH DIALYTIKA AND PERISPOMENI -->
+&#x1FF2; <!-- GREEK SMALL LETTER OMEGA WITH VARIA AND YPOGEGRAMMENI -->
+&#x1FF3; <!-- GREEK SMALL LETTER OMEGA WITH YPOGEGRAMMENI -->
+&#x1FF4; <!-- GREEK SMALL LETTER OMEGA WITH OXIA AND YPOGEGRAMMENI -->
+&#x1FF6; <!-- GREEK SMALL LETTER OMEGA WITH PERISPOMENI -->
+&#x1FF7; <!-- GREEK SMALL LETTER OMEGA WITH PERISPOMENI AND YPOGEGRAMMENI -->
+&#x1FFC; <!-- GREEK CAPITAL LETTER OMEGA WITH PROSGEGRAMMENI -->
 &#x214E;
 &#x2170;
 &#x2171;
@@ -944,6 +944,7 @@
 &#x2C5C;
 &#x2C5D;
 &#x2C5E;
+&#x2C5F;
 &#x2C61;
 &#x2C65;
 &#x2C66;
@@ -1147,9 +1148,13 @@
 &#xA7BB;
 &#xA7BD;
 &#xA7BF;
+&#xA7C1;
 &#xA7C3;
 &#xA7C8;
 &#xA7CA;
+&#xA7D1;
+&#xA7D7;
+&#xA7D9;
 &#xA7F6;
 &#xAB53;
 &#xAB70;
@@ -1232,18 +1237,18 @@
 &#xABBD;
 &#xABBE;
 &#xABBF;
-&#xFB00; 
-&#xFB01; 
-&#xFB02; 
-&#xFB03; 
-&#xFB04; 
-&#xFB05; 
-&#xFB06; 
-&#xFB13; 
-&#xFB14; 
-&#xFB15; 
-&#xFB16; 
-&#xFB17; 
+&#xFB00; <!-- LATIN SMALL LIGATURE FF -->
+&#xFB01; <!-- LATIN SMALL LIGATURE FI -->
+&#xFB02; <!-- LATIN SMALL LIGATURE FL -->
+&#xFB03; <!-- LATIN SMALL LIGATURE FFI -->
+&#xFB04; <!-- LATIN SMALL LIGATURE FFL -->
+&#xFB05; <!-- LATIN SMALL LIGATURE LONG S T -->
+&#xFB06; <!-- LATIN SMALL LIGATURE ST -->
+&#xFB13; <!-- ARMENIAN SMALL LIGATURE MEN NOW -->
+&#xFB14; <!-- ARMENIAN SMALL LIGATURE MEN ECH -->
+&#xFB15; <!-- ARMENIAN SMALL LIGATURE MEN INI -->
+&#xFB16; <!-- ARMENIAN SMALL LIGATURE VEW NOW -->
+&#xFB17; <!-- ARMENIAN SMALL LIGATURE MEN XEH -->
 &#xFF41;
 &#xFF42;
 &#xFF43;
@@ -1346,6 +1351,41 @@
 &#x104F9;
 &#x104FA;
 &#x104FB;
+&#x10597;
+&#x10598;
+&#x10599;
+&#x1059A;
+&#x1059B;
+&#x1059C;
+&#x1059D;
+&#x1059E;
+&#x1059F;
+&#x105A0;
+&#x105A1;
+&#x105A3;
+&#x105A4;
+&#x105A5;
+&#x105A6;
+&#x105A7;
+&#x105A8;
+&#x105A9;
+&#x105AA;
+&#x105AB;
+&#x105AC;
+&#x105AD;
+&#x105AE;
+&#x105AF;
+&#x105B0;
+&#x105B1;
+&#x105B3;
+&#x105B4;
+&#x105B5;
+&#x105B6;
+&#x105B7;
+&#x105B8;
+&#x105B9;
+&#x105BB;
+&#x105BC;
 &#x10CC0;
 &#x10CC1;
 &#x10CC2;
