Bug 1725583 - Improve contrast of --in-content-box-border-color and --in-content-button-border-color in high contrast mode r=mtigley,desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D127452

UltraBlame original commit: a21f52c1b50ac649f75e49acb494d9d6c36049b3

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -193,7 +193,7 @@
 
     --in-content-box-background: -moz-Dialog;
     --in-content-box-background-odd: -moz-Dialog;
-    --in-content-box-border-color: ThreeDShadow;
+    --in-content-box-border-color: -moz-DialogText;
     --in-content-box-info-background: -moz-Dialog;
 
     --in-content-item-hover: SelectedItem;
@@ -222,7 +222,7 @@
     --in-content-button-text-color: ButtonText;
     --in-content-button-background-hover: SelectedItem;
     --in-content-button-background-active: SelectedItem;
-    --in-content-button-border-color: ThreeDShadow;
+    --in-content-button-border-color: var(--in-content-button-text-color);
 
     --in-content-primary-button-text-color: SelectedItemText;
     --in-content-primary-button-text-color-hover: SelectedItem;
