Bug 1737754 - Restore specificity for small buttons rule to fix infobar notification call-to-action buttons. r=jaws,desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D131457

UltraBlame original commit: ca306f7eb9912f0eeafc24a14716185291a12032

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -361,7 +361,7 @@ button {
 }
 
 /* Small buttons get sized to 6/12px padding (when adding the 1px border) */
-.small-button {
+button.small-button {
   padding: 5px 11px;
   min-height: 24px;
   font-size: 0.9em;
