Bug 1393920 - Fix intermittent failure in test_chrome_ext_contentscript_telemetry.html r=mixedpuppy
Differential Revision: https://phabricator.services.mozilla.com/D131694

UltraBlame original commit: 6cce6af3325e3d620c2c83958d840da23bed5c3a

--- a/toolkit/components/extensions/test/mochitest/test_chrome_ext_contentscript_telemetry.html
+++ b/toolkit/components/extensions/test/mochitest/test_chrome_ext_contentscript_telemetry.html
@@ -39,7 +39,11 @@ add_task(async function test_contentscript_telemetry() {
     background,
   };
 
-  let win = window.open("http://example.com/");
+  let tab = await AppTestDelegate.openNewForegroundTab(
+    window,
+    "http://example.com",
+    true
+  );
 
   let extension = ExtensionTestUtils.loadExtension(extensionData);
 
@@ -59,7 +63,7 @@ add_task(async function test_contentscript_telemetry() {
   ok(histogramSum > 0,
      `Data recorded for first extension for histogram: ${HISTOGRAM}.`);
 
-  win.close();
+  await AppTestDelegate.removeTab(window, tab);
   await extension.unload();
 });
 </script>
